# INF6803

./: .gitignore  README.md
EigenFaces/: CMakeLists.txt  Readme.txt  results.ods
EigenFaces/include/: common.hpp.in
EigenFaces/src/: main.cpp
TP1/: CMakeLists.txt  performances.ods
TP1/src/tp1/: main.cpp  vibe.cpp
TP2/: CMakeLists.txt  README.txt
TP2/include/tp2/: common.hpp.conf
TP2/src/tp2/: MyTracker.cpp  MyTracker.cpp.autosave  main.cpp
TP3/EigenFaces/: CMakeLists.txt  main.cpp
